# kaldi-active-grammar

./: .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  Justfile  README.md  pyproject.toml  requirements-build.txt  requirements-test.txt  setup.cfg  setup.py
.github/: FUNDING.yml  RELEASING.md  release_notes.md
.github/workflows/: build.yml  tests.yml
building/: Dockerfile.manylinux  build-wheel-dockcross.sh  build-wheel-manylinux.sh  dockcross-manylinux2010-x64  kaldi-configure-wrapper.sh
docs/: kaldi-fork-architecture.md  models.md
examples/: audio.py  full_example.py  mix_dictation.py  plain_dictation.py  requirements_audio.txt  util.py
kaldi_active_grammar/: LICENSE.txt  __init__.py  __main__.py  alternative_dictation.py  cloud.py  compiler.py  defaults.py  ffi.py  model.py  plain_dictation.py  utils.py  wfst.py  whisper_dictation.py  whisper_server.py  wrapper.py
kaldi_active_grammar/kaldi/: augment_phones_txt.py  augment_phones_txt_py2.py  augment_words_txt.py  make_lexicon_fst.py  make_lexicon_fst_py2.py
tests/: conftest.py  generate_google_tts.py  generate_piper_tts.py  helpers.py  run_each_test_separately.py  test_grammar.py  test_lifecycle.py  test_package.py  test_plain_dictation.py
